# play

./: .gitignore
alg/: CMakeLists.txt
alg/common/: quick_sort.cpp
alg/leetcode/: CMakeLists.txt  leetcode.h
alg/sort/: main.cpp  sort_imp.h
leetcode/: CMakeLists.txt  README.md  leetcode.h
leetcode/021/: merge_two_sorted_list.cpp
leetcode/028/: strstr.cpp
leetcode/035/: search_insert_position.cpp
leetcode/867/: transpose_matrix.cpp
leetcode/array/: CMakeLists.txt
leetcode/array/0169_Majority_Element/: main.cpp
leetcode/backtracking/: CMakeLists.txt
leetcode/backtracking/0017_Letter_Combinations_of_a_Phone_Number/: main.cpp
leetcode/backtracking/0022_Generate_Parentheses/: main.cpp
leetcode/backtracking/0077_Combinations/: main.cpp
leetcode/backtracking/0093_Restore_IP_Addresses/: main.cpp
leetcode/binary_tree/: CMakeLists.txt  binary_tree.cpp  binary_tree.h
leetcode/binary_tree/0098_Validate_Binary_Search_Tree/: main.cpp
leetcode/binary_tree/0102_Binary_Tree_Level_Order_Traversal/: main.cpp
leetcode/binary_tree/0144_Binary_Tree_Preorder_Traversal/: main.cpp
leetcode/binary_tree/0226_Invert_Binary_Tree/: main.cpp
leetcode/bits/: CMakeLists.txt
leetcode/design/: CMakeLists.txt
leetcode/design/0208_Implement_Trie/: main.cpp
leetcode/dynamic_programming/: CMakeLists.txt
leetcode/dynamic_programming/0279_Perfect_Squares/: main.cpp
leetcode/dynamic_programming/0552_Student_Attendance_Record_II/: main.cpp
leetcode/link_list/: CMakeLists.txt  listnode.h
leetcode/link_list/0002_Add_Two_Numbers/: main.cpp
leetcode/link_list/0206_Reverse_Linked_List/: main.cpp
leetcode/math/: CMakeLists.txt
leetcode/matrix/: CMakeLists.txt
leetcode/number/: CMakeLists.txt
leetcode/stack&queue/: CMakeLists.txt
leetcode/stack&queue/0020_Valid_Parentheses/: main.go
leetcode/string/: CMakeLists.txt
leetcode/string/0394_Decode_String/: main.cpp
leetcode/string/0551_Student_Attendance_Record_I/: main.cpp  main.go  main.py
leetcode/usefull/0393_UTF-8_Validation/: main.cpp
opencv/src/: CMakeLists.txt  _image.h
opencv/src/ch1/: CMakeLists.txt  cv_test.cpp  main.cpp
qt_opencv/: opencv.sh
qt_opencv/doc/: 1.opencv与qt简介.md  4.Mat与QImage.md
qt_opencv/doc/assets/: image-20181102175508779.tiff  image-20181102180207717.tiff  image-20181102181032237.tiff
qt_opencv/src/ch1/hello_qt/: hello_qt.pro  helloqtwin.cpp  helloqtwin.ui
qt_opencv/src/ch2/hello_qt_opencv/: hello_qt_opencv.pro  mainwindow.cpp
qt_opencv/src/chapter1/hello_qt/: helloqtwin.h  main.cpp
qt_opencv/src/chapter2/hello_qt_opencv/: hello_qt_opencv.pro  mainwindow.h  mainwindow.ui
