cmake_minimum_required(VERSION 2.8)
set(CMAKE_CXX_STANDARD 11)

#008
add_executable(0008_ atoi.cpp)

#013
add_executable(0013_ roman_to_integer.cpp)

#028
add_executable(0028_ strstr.cpp)

#0125
add_executable(0125_ 0125_Valid_Palindrome/main.cpp)

#0151
add_executable(0151_ 0151_Reverse_Words_in_a_String/main.cpp)

#0344
add_executable(0344_ 0344_Reverse_String/main.cpp)

#0345
add_executable(0345_ 0345_Reverse_Vowels_of_a_String/main.cpp)

#0520
add_executable(0520_ 0520_Detect_Capital/main.cpp)

